xsec scaling updates
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@260 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -142,21 +142,21 @@ See~\cite{Buchmueller:2014yoa} for a thorough discussion.
 In this section, the differences between the models with pure vector and axial-vector couplings are described.
 Furthermore, it is possible to consider other models in which mixed vector and axial-vector couplings are considered, for instance the couplings to the quarks are axial-vector whereas those to DM are vector. Such comparison is also presented.
 
-The samples with pure vector and pure axial-vector couplings are compared for $\mMed=100\,\gev$ and different Dark Matter masses in Fig.\,\ref{fig:monojet_VAmodels}. %The minimal width between the samples with the same Dark Matter and mediator masses differ only at the percent level.
+The samples with pure vector and pure axial-vector couplings are compared for $\mMed=100$~\gev and different Dark Matter masses in Fig.\,\ref{fig:monojet_VAmodels}. %The minimal width between the samples with the same Dark Matter and mediator masses differ only at the percent level.
 No differences in the shape of the \MET distributions are observed between the samples with coincident masses. \Todo{Do we want to propose to generate one model only and refer to the cross section tables in HEPData repository for the other?}
 In the case of the on-shell Dark Matter pair production where $2\mDM\ll\mMed$, the cross sections of the pure vector and pure axial-vector models are similar. With increasing Dark Matter mass towards the $2\mDM=\mMed$ transition and beyond into the off-shell production regime, the relative difference between the cross sections of the two samples is increasing, with the vector samples having larger cross sections. 
 
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{figures/monojet/compareModels_VA_100.eps}
-\caption{Comparison of the pure vector and pure axial-vector couplings. The $\MET$ distribution is shown for the samples generated with $\mMed=100\,\gev$ and different Dark Matter masses. Ratios of the normalized distributions are shown for between the samples with coincident masses. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+\caption{Comparison of the pure vector and pure axial-vector couplings. The $\MET$ distribution is shown for the samples generated with $\mMed=100$~\gev and different Dark Matter masses. Ratios of the normalized distributions are shown for between the samples with coincident masses. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_VAmodels}
 \end{figure}
 
-Figure\,\ref{fig:monojet_scan_VA_mMed1000} shows the samples generated with pure and mixed couplings for $\mDM=100\,\gev$ and $\mMed=1\,\tev$, i.e. where the Dark Matter pair is produced on-shell. The mediator width between the pure vector and pure axial-vector couplings differ only by 2\% in this case, and $<10\%$ agreement between the cross sections is found. The mediator widths for the samples with the same type coupling to quarks agree at better than 1\% since the width is dominated by the quark contribution, as expected from Eq.\,\ref{eq:GammaV}.
+Figure\,\ref{fig:monojet_scan_VA_mMed1000} shows the samples generated with pure and mixed couplings for $\mDM=100$~\gev and $\mMed=1\,\tev$, i.e. where the Dark Matter pair is produced on-shell. The mediator width between the pure vector and pure axial-vector couplings differ only by 2\% in this case, and $<10\%$ agreement between the cross sections is found. The mediator widths for the samples with the same type coupling to quarks agree at better than 1\% since the width is dominated by the quark contribution, as expected from Eq.\,\ref{eq:GammaV}.
 In the mediator rest frame, the angular distribution of the DM relative to the mediator direction of motion has the form $1+z^2+2*C*z$, where $z=\cos\theta$, with the second term only present in the mixed case, which may lead to acceptance differences. However, no significant differences between the samples with same type Dark Matter coupling are seen, given the statistical precision of the generated samples.
 
-For the off-shell Dark Matter pair production, shown in Fig.\,\ref{fig:monojet_scan_VA_mMed100} for $\mDM=100\,\gev$ and $\mMed=100\,\gev$, approximately factor 2 difference between the cross-sections of the samples with pure couplings is observed. As in the previous case, the samples with the same type coupling to Dark Matter are similar both in terms of cross sections and \MET shape. Since the contribution to the mediator width from Dark Matter is closed in this case, only the quark couplings define the width. Only couplings to light quarks are opened in the case of $\mMed=100\,\gev$ for which the differences between the partial widths of vector and axial-vector couplings are marginal. This explains the similar minimal widths for all four samples stated in Fig.\,\ref{fig:monojet_scan_VA_mMed100}.
+For the off-shell Dark Matter pair production, shown in Fig.\,\ref{fig:monojet_scan_VA_mMed100} for $\mDM=100$~\gev and $\mMed=100$~\gev, approximately factor 2 difference between the cross-sections of the samples with pure couplings is observed. As in the previous case, the samples with the same type coupling to Dark Matter are similar both in terms of cross sections and \MET shape. Since the contribution to the mediator width from Dark Matter is closed in this case, only the quark couplings define the width. Only couplings to light quarks are opened in the case of $\mMed=100$~\gev for which the differences between the partial widths of vector and axial-vector couplings are marginal. This explains the similar minimal widths for all four samples stated in Fig.\,\ref{fig:monojet_scan_VA_mMed100}.
 
 In general, the coupling to quarks is not expected to play an important role as it is only needed to produce the mediator which is confirmed by the observations above. On the contrary, the coupling to Dark Matter determines the form of the matrix element which explains the similarity of the samples with the same type Dark Matter couplings. 
 Based on these arguments, we recommend to consider only the models with pure vector couplings or pure axial-vector couplings.
@@ -164,14 +164,14 @@ Based on these arguments, we recommend to consider only the models with pure vec
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{figures/monojet/compareVA_100_1000.eps}
-\caption{Comparison of the pure vector, V-V, and pure axial-vector, A-A, couplings with mixed couplings, A-V and V-A where the first (second) letter indicates the Standard Model (Dark Sector) vertex. The $\MET$ distribution is shown for the samples generated with $\mDM=100\,\gev$ and $\mMed=1\,\tev$. Ratios of the normalized distributions are shown for A-V over V-V and for V-A over A-A. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+\caption{Comparison of the pure vector, V-V, and pure axial-vector, A-A, couplings with mixed couplings, A-V and V-A where the first (second) letter indicates the Standard Model (Dark Sector) vertex. The $\MET$ distribution is shown for the samples generated with $\mDM=100$~\gev and $\mMed=1$~\tev. Ratios of the normalized distributions are shown for A-V over V-V and for V-A over A-A. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_VA_mMed1000}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{figures/monojet/compareVA_100_100.eps}
-\caption{Comparison of the pure vector, V-V, and pure axial-vector, A-A, couplings with mixed couplings, A-V and V-A where the first (second) letter indicates the Standard Model (Dark Sector) vertex. The $\MET$ distribution is shown for the samples generated with $\mDM=100\,\gev$ and $\mMed=100\,\gev$. Ratios of the normalized distributions are shown for A-V over V-V and for V-A over A-A. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+\caption{Comparison of the pure vector, V-V, and pure axial-vector, A-A, couplings with mixed couplings, A-V and V-A where the first (second) letter indicates the Standard Model (Dark Sector) vertex. The $\MET$ distribution is shown for the samples generated with $\mDM=100$~\gev and $\mMed=100$~\gev. Ratios of the normalized distributions are shown for A-V over V-V and for V-A over A-A. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_VA_mMed100}
 \end{figure}
 %%% end of the new section by DS
@@ -801,32 +801,45 @@ However, it is important to keep in mind that this formula omits color and multi
 Therefore, the scaling procedure outlined above is expected to work only for fixed masses and fixed mediator width, assuming the narrow width approximation applies.
 
 
-Figures\,\ref{fig:monojet_width100} and \ref{fig:monojet_width1000} show the minimal width in the $\gq$--$\gDM$ plane for all vector, axial-vector, scalar and pseudo-scalar mediators for $\mMed=100$~\gev and 1000~\gev, respectively, taking $\mDM=10$~\gev. The individual colors indicate the lines of constant width along which the cross section scaling works. For vector and axial-vector mediators, the minimal width is predominantly defined by $\gq$ due to the number of quark flavors and the color factor. %In this case, the scaling follows from Eq.\,\ref{eq:monojet_gDM}.
+%Figures\,\ref{fig:monojet_width100} and \ref{fig:monojet_width1000} show the minimal width in the $\gq$--$\gDM$ plane for all vector, axial-vector, scalar and pseudo-scalar mediators for $\mMed=100$~\gev and 1000~\gev, respectively, taking $\mDM=10$~\gev.
+Figure\,\ref{fig:monojet_width} shows the minimal width over the mediator mass in the $\gq$--$\gDM$ plane for vector and scalar mediators for $\mMed=100$~\gev and 1000~\gev, taking $\mDM=10$~\gev.
+The individual colors indicate the lines of constant width, along which the cross section scaling may work for narrow mediators.
+The limiting case $\Gamma_{\rm{min}}=\mMed$ defines the upper values of the couplings below which the narrow width approximation can be considered and provides more stringent constraint than the perturbative limit $\gq=\gDM=4\pi$.
+For vector and axial-vector mediators, the minimal width is predominantly defined by $\gq$ due to the number of quark flavors and the color factor. %In this case, the scaling follows from Eq.\,\ref{eq:monojet_gDM}.
 On the contrary, both the Standard Model and Dark Matter partial width have comparable contributions in case of scalar and pseudo-scalar mediators if the top quark channel is open ($\mMed>2m_t$). However, mostly $\gDM$ defines the minimal width for $\mMed<2m_t$ due to the Yukawa-suppressed light quark couplings.
-
-
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_V_gg100.eps}
-	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_A_gg100.eps}\\
-	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg100.eps}
-	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_P_gg100.eps}
-	\caption{Minimal width for vector, axial-vector, scalar and pseudo-scalar mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=100$~\gev and $\mDM=10$~\gev.
+	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg100.eps}\\
+	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_V_gg1000.eps}
+	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg1000.eps}
+	\caption{Minimal width over the mediator mass for vector (left) and scalar (right) mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=100$~\gev (top) and $\mMed=1$~\tev (bottom). $\mDM=10$~\gev is considered in all cases.
 		The limiting case $\Gamma_{\rm{min}}=\mMed$ is indicated by the black line.} 
-	\label{fig:monojet_width100}
+	\label{fig:monojet_width}
 \end{figure}
 
-\begin{figure}
-	\centering
-	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_V_gg1000.eps}
-	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_A_gg1000.eps}\\
-	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg1000.eps}
-	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_P_gg1000.eps}
-	\caption{Minimal width for vector, axial-vector, scalar and pseudo-scalar mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=1$~\tev and $\mDM=10$~\gev.
-		The limiting case $\Gamma_{\rm{min}}=\mMed$ is indicated by the black line.} 
-	\label{fig:monojet_width1000}
-\end{figure}
+%\begin{figure}
+%	\centering
+%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_V_gg100.eps}
+%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_A_gg100.eps}\\
+%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg100.eps}
+%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_P_gg100.eps}
+%	\caption{Minimal width over the mediator mass for vector, axial-vector, scalar and pseudo-scalar mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=100$~\gev and $\mDM=10$~\gev.
+%		The limiting case $\Gamma_{\rm{min}}=\mMed$ is indicated by the black line.} 
+%	\label{fig:monojet_width100}
+%\end{figure}
+%
+%\begin{figure}
+%	\centering
+%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_V_gg1000.eps}
+%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_A_gg1000.eps}\\
+%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg1000.eps}
+%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_P_gg1000.eps}
+%	\caption{Minimal width over the mediator mass for vector, axial-vector, scalar and pseudo-scalar mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=1$~\tev and $\mDM=10$~\gev.
+%		The limiting case $\Gamma_{\rm{min}}=\mMed$ is indicated by the black line.} 
+%	\label{fig:monojet_width1000}
+%\end{figure}
 
 \Todo{Reduce plots to mMed<GammaMin region}
 %in the plots (gDM = 6, gSM = 1.5 for $V$ and gSM = gDM = 5 for $S$)}
@@ -847,7 +860,7 @@ Constant colors indicate the lines along which the cross section scaling works p
 	\includegraphics[width=0.45\textwidth]{figures/monojet/scaling_S_10_1000.eps}\\
 	\caption{Ratio of the rescaled and generated cross sections in the $\gq$--$\gDM$ plane. The point at $\gq=\gDM=1$, taken as a reference for the rescaling, is denoted by a star symbol.
 		Scalar model with $\mMed=100$~\gev (left) and 1~\tev (right) is plotted for $\mDM=10$~\gev.
-		The limiting case $\Gamma_{\rm{min}}=\mMed$ is shown as a black line.}
+		The limiting case $\Gamma_{\rm{min}}=\mMed$ is indicated by a black line and no results are shown beyond.}
 	%Vector (scalar) mediator is shown at the top (bottom), the left (right) column corresponds to $\mMed=100$~\gev ($\mMed=1$~\tev). Dark Matter mass of 10~\gev is considered.}
 	\label{fig:monojet_scaling}
 \end{figure}
@@ -868,9 +881,9 @@ Constant colors indicate the lines along which the cross section scaling works p
 
 We propose to deliver collider results in the $\gq$--$\gDM$ plane using the following prescription, to ease reinterpretation through cross-section scaling:
 \begin{itemize}
-	\item Since the shapes of kinematic quantities do not change for different couplings, use the acceptance and efficiency for the available $\mDM=50$~\gev, $\mMed=300$~\gev, $\gq=\gDM=1$ grid point from the $\mMed$--$\mDM$ plane for the scalar and pseudo-scalar mediator. In case of the vector and axial-vector mediator, use the grid point $\mDM=50$~\gev, $\mMed=1$~\tev, $\gq=\gDM=1$.
-	\item Generate additional samples in order to get generator cross sections only. For scalar and pseudo-scalar mediator, choose $\mDM=50$~\gev, $\mMed=300$~\gev with the following values for $\gq=\gDM$: 0.1, 2, 3. For vector and axial vector mediator, choose $\mDM=50$~\gev, $\mMed=1$~\tev with the following values for $\gq=\gDM$: 0.1, 0.25, 0.5, 0.75, 1.25, 1.5. The upper values are defined by the minimal width reaching the mediator mass. \Todo{Waiting for scalar mediator calculation of perturbativity limit from J. Alcaraz.).}
-	\item Rescale the generator cross sections for on-shell resonance production along the lines of constant width in order to populate the whole $\gq$--$\gDM$ plane.
+	\item Since the shapes of kinematic quantities do not change for different couplings, use the acceptance and efficiency for the available $\mDM=50$~\gev, $\mMed=300$~\gev, $\gq=\gDM=1$ grid point from the $\mMed$--$\mDM$ plane for the scalar and pseudo-scalar mediator. In case of the vector and axial-vector mediator, use the grid point $\mDM=150$~\gev, $\mMed=1$~\tev, $\gq=\gDM=1$.
+	\item Generate additional samples in order to get generator cross sections only. For scalar and pseudo-scalar mediator, choose $\mDM=50$~\gev, $\mMed=300$~\gev with the following values for $\gq=\gDM$: 0.1, 2, 3. For vector and axial vector mediator, choose $\mDM=150$~\gev, $\mMed=1$~\tev with the following values for $\gq=\gDM$: 0.1, 0.25, 0.5, 0.75, 1.25, 1.5. The upper values are defined by the minimal width reaching the mediator mass. \Todo{Waiting for scalar mediator calculation of perturbativity limit from J. Alcaraz.).}
+	\item Rescale the generator cross sections for on-shell resonance production along the lines of constant width in order to populate the whole $\gq$--$\gDM$ plane in the region $\Gamma_{\rm{min}}<\mMed$.
 The scaling follows from Eq.\,\ref{eq:monojet_scaling} which for the constant width implies:
 \begin{equation}
 \sigma' = \sigma \times \frac{\gq'^2\gDM'^2}{\gq^2\gDM^2} \;.
