EFT added into the heavy mediator plot
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@264 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -212,10 +212,10 @@ Figure\,\ref{fig:monojet_narrow} suggests a change in the shape of the
 $\MET$ distribution for a \mMed=5~\tev mediator
 once $\Gamma_{\rm{min}}/\mMed$ is of the order of a percent or lower.
 Such heavy mediators, although inacessible by the LHC data, are interesting since they provide a good approximation for benchmark EFT models.
-The observed difference in the plot arises from the fact that the region of low invariant masses of the Dark Matter pair, $m_{\bar{\chiDM}\chiDM}$, is suppressed due to narrow Breit-Wigner peak that only probes a narrow window of parton distribution functions. For wider mediators, the low mass region is significantly enhanced by parton distribution functions, as illustrated in Fig.\,\ref{fig:monojet_mchichi}.
+The observed difference among the simplified models in the plot arises from the fact that the region of low invariant masses of the Dark Matter pair, $m_{\bar{\chiDM}\chiDM}$, is suppressed due to narrow Breit-Wigner peak that only probes a narrow window of parton distribution functions. For wider mediators, the low mass region is significantly enhanced by parton distribution functions, as illustrated in Fig.\,\ref{fig:monojet_mchichi}.
 This explains why the sample with the narrowest mediator in Fig.\,\ref{fig:monojet_narrow} is heavily suppressed in terms of production cross section and also gives different $\MET$ shape.
 %In general, for such extreme parameter choices the EFT model should give the correct answer.
-In terms of comparisons to the EFT samples, the simplified models with larger mediator widths (e.g. for couplings of 1) are the ones resembling the kinematics of contact interactions, since the production there is always off-shell, i.e. no peak in the $m_{\bar{\chiDM}\chiDM}$ distribution is present.
+Furthermore, Fig.\,\ref{fig:monojet_narrow} compares the vector model with 5~\tev mediator to the D5 EFT sample and reveals that the simplified models with larger mediator widths (e.g. for couplings of 1) are the ones resembling the kinematics of contact interactions. This is because the production in the EFT model is always off-shell, i.e. no peak in the $m_{\bar{\chiDM}\chiDM}$ distribution is present.
 
 
 However, the complete story of generating heavy narrow mediators is a cautionary tale
@@ -238,10 +238,17 @@ resonant production at $m_{\bar{\chiDM}\chiDM}=7$~\tev is statistically suppress
 %in fact, if your simplified model calculation does not reproduce the EFT result for such extreme parameter choices, you have to carefully look at the phase-space generation of the simplified model calculation (as you did). at the end you probably have to tailor the phase-space generator of \madgraph, \powheg, etc. to get it right; this will be non-trivial since phase-space generation is an art! furthermore, one has to do this process 
 %by process and the difficulties will increase from mono-jet to ttbar + \MET, etc. 
 
+%\begin{figure}
+%\centering
+%\includegraphics[width=0.9\textwidth]{figures/monojet/scan_g_V_10_5000.eps}
+%\caption{Scan over couplings. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+%\label{fig:monojet_narrow}
+%\end{figure}
+
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/scan_g_V_10_5000.eps}
-\caption{Scan over couplings. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
+\includegraphics[width=0.9\textwidth]{figures/monojet/scan_g_EFT_10_5000.eps}
+\caption{Comparison of the $\MET$ distributions from the D5 EFT sample and the vector models with 5~\tev heavy mediator of various widths. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_narrow}
 \end{figure}
 
