--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -832,10 +832,10 @@ On the contrary, both the Standard Model and Dark Matter partial width have comp
 \begin{figure}
 	\centering
 	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_V_gg100.eps}
-	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg100.eps}\\
-	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_V_gg1000.eps}
+	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_V_gg1000.eps}\\
+	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg100.eps}
 	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg1000.eps}
-	\caption{Minimal width over the mediator mass for vector (left) and scalar (right) mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=100$~\gev (top) and $\mMed=1$~\tev (bottom). $\mDM=10$~\gev is considered in all cases.
+	\caption{Minimal width over the mediator mass for vector (top) and scalar (bottom) mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=100$~\gev (left) and $\mMed=1$~\tev (right). $\mDM=10$~\gev is considered in all cases.
 %		The limiting case $\Gamma_{\rm{min}}=\mMed$ is indicated by the black line.
 		Only the cases with $\Gamma_{\rm{min}}<\mMed$ are shown.}
 	\label{fig:monojet_width}
